--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,6 @@ jobs:
       run: mvn clean package -DskipTests
 
     - name: Upload artifact
-      if: github.event_name == 'push'
       #if: github.event_name == 'push' && github.ref == 'refs/heads/main'
       uses: actions/upload-artifact@v4
       with:
@@ -46,7 +45,7 @@ jobs:
         path: target/*.jar
 
   build-and-deploy:
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    #if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
