--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
-  ECR_REPOSITORY: tech-challenge-api
+  ECR_REPOSITORY: tech-challenge-application
   EKS_CLUSTER_NAME: tech-challenge-eks
 
 jobs:
