--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- Logback JSON encoder for structured logging -->
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.4</version>
+        </dependency>
+        
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
